<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusableInTouchMode="false"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/imageView"
        android:src="@drawable/bg"
        android:scaleType="fitStart"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_above="@+id/saveButton"
        >
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="120dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/MinutsBetweenDuaa"
                            android:id="@+id/textView"
                            android:gravity="center|right"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/common_signin_btn_dark_text_default"
                            tools:ignore="RtlHardcoded" />

                        <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:id="@+id/numberPicker"
                            android:layout_alignParentStart="true"
                            android:layout_alignBottom="@+id/textView" />
                    </RelativeLayout>

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="80dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/SabahAlarm"
                            android:id="@+id/textView2"
                            android:gravity="center|right"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/common_signin_btn_dark_text_default"
                            android:layout_alignParentTop="true" />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:id="@+id/checkBoxAM"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:visibility="visible" />

                        <TimePicker
                            android:layout_width="wrap_content"
                            android:layout_height="140dp"
                            android:id="@+id/timePickerAM"
                            android:layout_below="@id/checkBoxAM"
                            android:layout_centerHorizontal="true"
                            android:timePickerMode="spinner"
                            android:visibility="gone" />


                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="80dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/MasaaAlarm"
                            android:id="@+id/textView3"
                            android:gravity="center|start"
                            android:textColor="@color/common_signin_btn_dark_text_default"
                            android:layout_alignParentTop="true" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:id="@+id/checkBoxPM"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true" />

                        <TimePicker
                            android:layout_width="wrap_content"
                            android:layout_height="140dp"
                            android:id="@+id/timePickerPM"
                            android:layout_below="@id/checkBoxPM"
                            android:layout_centerHorizontal="true"
                            android:timePickerMode="spinner"
                            android:visibility="gone" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/Akar"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:id="@+id/duaButton" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Save"
        android:layout_above="@+id/imageView2"
        android:layout_toEndOf="@+id/shareButton"
        android:layout_toStartOf="@+id/duaButton"
        android:id="@+id/saveButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/Share"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:id="@+id/shareButton" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textColor="@color/common_signin_btn_dark_text_default"
        android:text="@string/DuaaForUs"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:textSize="28sp"
        android:gravity="center_vertical|center_horizontal" />

</RelativeLayout>
